<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu"
    android:background="#fff1ce">


    <TextView
        android:id="@+id/titulo2"
        android:layout_width="255dp"
        android:layout_height="146dp"
        android:fontFamily="@font/the_augusta"
        android:text="Raya3!"
        android:textColor="#b88c87"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/butnplay"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginStart="88dp"
        android:backgroundTint="#c5a898"
        android:text="Jugar"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"></Button>

    <Button
        android:id="@+id/butnconf"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginStart="88dp"
        android:backgroundTint="#E3CBF5"
        android:text="Configuración"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643"></Button>

    <Button
        android:id="@+id/butnhist"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginStart="88dp"
        android:backgroundTint="#c5a898"
        android:text="Ver Historial"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>