...
        android:layout_height="wrap_content"
        android:gravity="center">

    </LinearLayout>

    <Button
        android:id="@+id/button_vsPly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:backgroundTint="#c5a898"
        android:text="J1 Vs J2"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#c5a898"
        android:text="Vs Hard Mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vsPMach" />

    <Button
        android:id="@+id/button_middMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
...
