...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PantallaTresEnRaya">

    <LinearLayout
        android:id="@+id/tableroLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
...
        app:cornerRadius="20dp"
        tools:ignore="VisualLintButtonSize">

    </Button>

    <Button
        android:id="@+id/reiniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reiniciar"
        android:backgroundTint="#F44336"
        app:cornerRadius="20dp"
        tools:ignore="VisualLintButtonSize">
...
